--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "mainClass": "FastFtp",
             "projectName": "CPSC-441_A3",
-            "args": "localhost 2225 assign.pdf 5 5", 
+            "args": "localhost 2225 TestImage.png 5 5"
         },
         {
             "type": "java",
