--- a/server/logging.properties
+++ b/server/logging.properties
@@ -2,7 +2,7 @@
 handlers = java.util.logging.ConsoleHandler
     
 # Set the default logging level for the root logger
-.level = INFO
+.level = FINE
     
 # Set the default logging level for new ConsoleHandler instances
 java.util.logging.ConsoleHandler.level = ALL
@@ -12,5 +12,5 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 java.util.logging.SimpleFormatter.format = %5$s %n
     
 # Set the default logging level for specific logger
-cpsc441.a3.server.level = INFO
+cpsc441.a3.server.level = FINE
 
